fixed bleeding issues when viewport shrinks

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,11 +28,14 @@ textarea {
 .row {
 height:80px;
 color: black;
-
 }
 
 .hour {
     color: #000000;
+}
+
+.col-2 {
+  text-align: center;
 }
 
 .notes {
